Added connector